docs: synthesize v1.11 research SUMMARY